SAK-42762 Samigo: Latex question text alignment issue

--- a/samigo/samigo-app/src/webapp/css/tool_sam.css
+++ b/samigo/samigo-app/src/webapp/css/tool_sam.css
@@ -1444,6 +1444,10 @@ input[type='reset'].linearButton {
 	padding: 6px 12px;
 }
 
+.MathJax_Display {
+  text-align: left !important;
+}
+
 .input-group-btn button.multiselect-clear-filter{
 	padding: 6px 12px;
 	font-size: 14px;
